--- a/services.css
+++ b/services.css
@@ -1021,24 +1021,19 @@ footer p {
 
   footer {
     padding: 40px 15px;
-    text-align: center;
+    text-align: center; 
   }
 
   .footer-container {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    align-items: center;
+    gap: 25px;
     padding: 0;
   }
 
   .footer-section {
-    min-width: auto;
-  }
-
-  .footer-container > .footer-section:nth-child(1),
-  .footer-container > .footer-section:nth-child(2),
-  .footer-container > .footer-section:nth-child(3) {
-    text-align: center;
+    text-align: center !important;
   }
 
   .footer-section h3 {
@@ -1049,11 +1044,22 @@ footer p {
   footer p,
   footer ul li a {
     font-size: 0.95rem;
+    text-align: center; 
+  }
+
+  footer ul {
+    padding: 0;
+    margin: 0;
+  }
+
+  footer ul li {
+    margin: 5px 0;
   }
 
   .footer-bottom {
     margin-top: 30px;
     padding-top: 15px;
     font-size: 0.85rem;
+    text-align: center;
   }
 }
