--- a/contact.css
+++ b/contact.css
@@ -176,6 +176,11 @@ nav {
     gap: 30px; 
 }
 
+.contact-layout p {
+    color: #30ce27; 
+}
+
+
 .contact-info {
     width: 40%;
     border-right: 1px solid black; 
@@ -190,11 +195,6 @@ nav {
     gap: 20px;
 }
 
-/* -------------------------------------- */
-/* Style des éléments du Formulaire */
-/* -------------------------------------- */
-
-/* ----- Titre stylé ----- */
 .titre-infos {
   text-align: center;
   margin-bottom: 60px;
@@ -208,7 +208,6 @@ nav {
   color: #1c95eb;
 }
 
-/* Petite barre décorative sous le titre */
 .titre-infos::after {
   content: "";
   display: block;
