--- a/style.css
+++ b/style.css
@@ -467,15 +467,13 @@ nav {
 }
 
 .avis {
-  min-width: 100%; 
-  max-width: 500px;
+  width: 100%; 
   margin: 0 auto;
   flex-shrink: 0;
   background: #ffffff;
   padding: 30px;
   border-radius: 30px;
   text-align: center;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
 }
 
 .avis p {
