--- a/style.css
+++ b/style.css
@@ -490,6 +490,18 @@ nav {
   font-weight: bold;
 }
 
+.stars {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center; 
+}
+
+.stars span {
+  color: #f5c518; 
+  font-size: 1.2rem;
+}
+
+
 .arrow {
   position: absolute;
   top: 45%;
