--- a/services.css
+++ b/services.css
@@ -179,12 +179,16 @@ nav {
 
 .service-modal {
   position: fixed;
-  inset: 0;
+  top: 0;  
+  left: 0;
+  width: 100vw;
+  height: 100vh;
   background: rgba(0,0,0,0.6);
   display: none;
   justify-content: center;
   align-items: center;
   z-index: 9999;
+  overflow: auto; 
 }
 
 .service-modal.active {
@@ -192,13 +196,13 @@ nav {
 }
 
 .service-modal-content {
-  width: clamp(300px, 50%, 600px);; 
-  max-width: 50%;
+  width: clamp(300px, 50%, 600px);
   padding: 20px;
   background: white;
   border-radius: 16px;
   text-align: center;
   animation: popup 0.25s ease;
+  position: relative; 
 }
 
 .service-modal-content img {
@@ -224,11 +228,11 @@ nav {
 
 .service-modal-close {
   position: absolute;
-  top: 20px;
+  top: 25px;
   right: 25px;
-  font-size: 32px;
+  font-size: 28px;
   cursor: pointer;
-  color: white;
+  color: #1c95eb;
 }
 
 .search-filter {
