--- a/services.css
+++ b/services.css
@@ -1002,8 +1002,7 @@ footer p {
   }
 
   .cta-card {
-    width: 100%;            
-    max-width: 300px;       
+    max-width: 100%;     
     text-align: center;     
     height: auto;
     padding: 12px 16px;;          
@@ -1020,8 +1019,7 @@ footer p {
   }
 
   .logement-card {
-    min-width: 200px;
-    max-width: 280px;
+    max-width: 100%;
   }
   
   .logement-arrow {
