--- a/style.css
+++ b/style.css
@@ -658,11 +658,11 @@ footer * {
   text-align: left;
 }
 
-.footer-container > .footer-section:nth-child(2) {
+.footer-container > .footer-section:nth-child(3) {
   text-align: center;
 }
 
-.footer-container > .footer-section:nth-child(3) {
+.footer-container > .footer-section:nth-child(4) {
   text-align: right;
 }
 
@@ -843,13 +843,13 @@ footer p {
   
   .hero {
     max-width: 100% !important;
-    padding: 40px 0; /* enlève les gros espaces latéraux */
+    padding: 40px 0; 
   }
 
   .hero-top {
     width: 100% !important;
     max-width: 100% !important;
-    padding: 0 10px; /* léger padding seulement */
+    padding: 0 10px; 
   }
 
   .hero-left,
